<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaisieNouveauPullActivity">

    <EditText
        android:id="@+id/titre_nouveau_pull"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="84dp"
        android:hint="@string/titre"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/description_nouveau_pull"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/titre_nouveau_pull"
        />

    <EditText
        android:id="@+id/prix_nouveau_pull"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/prix_newproduit"
        app:layout_constraintTop_toBottomOf="@id/description_nouveau_pull"
        />

    <Button
        android:id="@+id/bouton_valider_nouveau_pull"
        android:text="@string/valider"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/prix_nouveau_pull"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onClickValider"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>