<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriesActivity">

    <RadioGroup
        android:id="@+id/radio_boutons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <RadioButton
            android:id="@+id/vente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vente"
            android:checked="true"
            app:layout_constraintRight_toLeftOf="@id/catalogue"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <RadioButton
            android:id="@+id/catalogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catalogue"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/vente"
            />
    </RadioGroup>

    <ListView
        android:id="@+id/ca_liste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radio_boutons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/total_panier_texte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/total_panier_texte"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/footerView"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/total_panier_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/footerView"
        app:layout_constraintLeft_toRightOf="@id/total_panier_texte" />

    <TextView
        android:id="@+id/euro_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/euro"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/footerView"
        app:layout_constraintLeft_toRightOf="@id/total_panier_nombre"
        />

    <TextView
        android:id="@+id/footerView"
        android:background="@color/colorPrimaryDark"
        android:text="@string/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>