<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/image_cancel"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_baseline_cancel_24"
        android:background="@null"
        android:onClick="onClickAnnuler"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/texte_cancel"
        style="@style/ThemeCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        android:onClick="onClickAnnuler"
        app:layout_constraintLeft_toLeftOf="@id/image_cancel"
        app:layout_constraintRight_toRightOf="@id/image_cancel"
        app:layout_constraintTop_toBottomOf="@id/image_cancel"
        />


    <ImageButton
        android:id="@+id/image_add"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="42dp"
        android:onClick="onClickAddPull"
        android:scaleType="centerInside"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/texte_add"
        style="@style/ThemeAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAddPull"
        android:text="@string/nouveau_produit"
        app:layout_constraintLeft_toLeftOf="@id/image_add"
        app:layout_constraintRight_toRightOf="@id/image_add"
        app:layout_constraintTop_toBottomOf="@id/image_add"
        />

    <ImageView
        android:id="@+id/image_pull"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerInside"
        android:src="@drawable/imgdefaut"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titre"
        android:onClick="onClickZoom"
        />

    <ImageView
        android:id="@+id/image_pull_grande"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="onClickDezoom"
        android:scaleType="centerInside"
        android:src="@drawable/imgdefaut"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/bPrecedent"
        android:onClick="onClickPrecedent"
        android:layout_height="wrap_content"
        android:layout_width="40dp"
        android:text="@string/left"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="@id/image_pull"
        app:layout_constraintBottom_toBottomOf="@id/image_pull"
        app:layout_constraintRight_toLeftOf="@id/image_pull"
        />

    <Button
        android:id="@+id/bSuivant"
        android:onClick="onClickSuivant"
        android:layout_height="wrap_content"
        android:layout_width="40dp"
        android:text="@string/right"
        app:layout_constraintTop_toTopOf="@id/image_pull"
        app:layout_constraintBottom_toBottomOf="@id/image_pull"
        app:layout_constraintLeft_toRightOf="@id/image_pull"
        />

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/rennes"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_pull"
        />

    <TextView
        android:id="@+id/desc"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cadre"
        android:padding="10sp"
        android:maxLines="20"
        android:text="@string/desc"
        app:layout_constraintBottom_toTopOf="@id/prix_pull"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/taille_spinner"
        app:layout_constraintTop_toBottomOf="@id/titre"
        />

    <Spinner
        android:id="@+id/taille_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/taille"
        app:layout_constraintBottom_toTopOf="@id/color_spinner"
        app:layout_constraintLeft_toRightOf="@id/desc"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/desc"
        />

    <Spinner
        android:id="@+id/color_spinner"
        android:entries="@array/coloris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taille_spinner"
        app:layout_constraintLeft_toRightOf="@id/desc"
        app:layout_constraintBottom_toBottomOf="@id/error_spinner"
        />

    <TextView
        android:id="@+id/error_spinner"
        style="@style/ErrorSpinner"
        android:visibility="invisible"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/taille_spinner"
        app:layout_constraintTop_toBottomOf="@id/color_spinner"
        app:layout_constraintBottom_toBottomOf="@id/desc"
        app:layout_constraintRight_toRightOf="@id/taille_spinner"
        />


    <ImageButton
        android:id="@+id/image_panier"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerInside"
        android:background="@null"
        android:src="@drawable/ic_baseline_shopping_basket_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onClickPanier"
        />

    <TextView
        android:id="@+id/prix_pull"
        style="@style/ThemePrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prix"
        app:layout_constraintBottom_toBottomOf="@id/image_panier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_panier"
        />

    <TextView
        android:id="@+id/euro_pull"
        style="@style/ThemePrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euro"
        app:layout_constraintBottom_toBottomOf="@id/image_panier"
        app:layout_constraintLeft_toRightOf="@id/prix_pull"
        app:layout_constraintTop_toTopOf="@id/image_panier"
        />


    <TextView
        android:id="@+id/footerView"
        style="@style/ThemeFooter"
        android:text="@string/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>